--- a/sc17/demo.config
+++ b/sc17/demo.config
@@ -24,199 +24,283 @@ sS'vfc'
 p11
 S'br2'
 p12
-sS'rtt'
+sS'token'
 p13
-F38.8
-sS'port'
+NsS'rtt'
 p14
+F38.8
+sS'token_file'
+p15
+NsS'port'
+p16
 Nsba(icoord
 Switch
-p15
-(dp16
+p17
+(dp18
 g6
 I10
 sg7
 S'cern-272-tb-of-1'
-p17
+p19
 sg9
 S'192.168.120.36'
-p18
+p20
 sg11
 g12
 sg13
+Nsg14
 F89.5
-sg14
+sg15
+Nsg16
 Nsba(icoord
 Switch
-p19
-(dp20
+p21
+(dp22
 g6
 I23
 sg7
 S'amst-tb-of-1'
-p21
+p23
 sg9
 S'192.168.120.35'
-p22
+p24
 sg11
 S'br1'
-p23
+p25
 sg13
+Nsg14
 F82.5
-sg14
-NsbasS'sites'
-p24
-(lp25
-(icoord
-Site
+sg15
+Nsg16
+Nsba(icoord
+Switch
 p26
 (dp27
-S'switch'
-p28
-g4
-sS'container'
-p29
-(icoord
-Container
-p30
-(dp31
-g9
-S'192.168.120.192'
-p32
-sg7
-S'wash-192'
-p33
-sg14
-S'eth1'
-p34
-sbsg7
-S'wash'
-p35
-sba(icoord
-Site
-p36
-(dp37
-g28
-g19
-sg29
-(icoord
-Container
-p38
-(dp39
-g9
-S'192.168.120.190'
-p40
-sg7
-S'amst-190'
-p41
-sg14
-g34
-sbsg7
-S'amst'
-p42
-sba(icoord
-Site
-p43
-(dp44
-g28
-g15
-sg29
-(icoord
-Container
-p45
-(dp46
-g9
-S'192.168.120.194'
-p47
-sg7
-S'cern-194'
-p48
-sg14
-g34
-sbsg7
-S'cern'
-p49
-sba(icoord
-Site
-p50
-(dp51
-g28
-(icoord
-Switch
-p52
-(dp53
-g6
-I10
-sg7
-S'denv-tb-of-1'
-p54
-sg9
-S'192.168.120.37'
-p55
-sg11
-g23
-sg13
-I2
-sg14
-Nsbsg29
-(icoord
-Container
-p56
-(dp57
-g9
-S'192.168.120.195'
-p58
-sg7
-S'denv-190'
-p59
-sg14
-g34
-sbsg7
-S'denv'
-p60
-sba(icoord
-Site
-p61
-(dp62
-g28
-(icoord
-Switch
-p63
-(dp64
 g6
 I2
 sg7
 S'aofa-tb-of-1'
-p65
+p28
 sg9
 S'192.168.120.33'
-p66
+p29
 sg11
 g12
 sg13
+Nsg14
 F5.3
-sg14
-Nsbsg29
-(icoord
-Container
-p67
-(dp68
-g9
-S'192.168.120.191'
-p69
+sg15
+Nsg16
+Nsba(icoord
+Switch
+p30
+(dp31
+g6
+I10
 sg7
+S'denv-tb-of-1'
+p32
+sg9
+S'192.168.120.37'
+p33
+sg11
+g25
+sg13
+Nsg14
+I2
+sg15
+Nsg16
+Nsba(icoord
+Switch
+p34
+(dp35
+g6
+I9
+sg7
+S'atla-tb-of-1'
+p36
+sg9
+S'192.168.120.34'
+p37
+sg11
+g25
+sg13
+Nsg14
+F39.5
+sg15
+Nsg16
+NsbasS'dtns'
+p38
+(lp39
+(icoord
+DTN
+p40
+(dp41
+S'bias_fun'
+p42
+Nsg7
+S'wash-192'
+p43
+sg9
+S'192.168.120.192'
+p44
+sS'bias_args'
+p45
+NsS'requests'
+p46
+(lp47
+sg16
+S'eth1'
+p48
+sba(icoord
+DTN
+p49
+(dp50
+g42
+Nsg7
+S'cern-194'
+p51
+sg9
+S'192.168.120.194'
+p52
+sg45
+Nsg46
+(lp53
+sg16
+g48
+sba(icoord
+DTN
+p54
+(dp55
+g42
+Nsg7
+S'amst-190'
+p56
+sg9
+S'192.168.120.190'
+p57
+sg45
+Nsg46
+(lp58
+sg16
+g48
+sba(icoord
+DTN
+p59
+(dp60
+g42
+Nsg7
 S'aofa-191'
-p70
-sg14
-g34
-sbsg7
-S'aofa'
+p61
+sg9
+S'192.168.120.191'
+p62
+sg45
+Nsg46
+(lp63
+sg16
+g48
+sba(icoord
+DTN
+p64
+(dp65
+g42
+Nsg7
+S'denv-201'
+p66
+sg9
+S'192.168.120.201'
+p67
+sg45
+Nsg46
+(lp68
+sg16
+g48
+sba(icoord
+DTN
+p69
+(dp70
+g42
+Nsg7
+S'atla-200'
 p71
-sbasS'containers'
+sg9
+S'192.168.120.200'
 p72
+sg45
+Nsg46
 (lp73
+sg16
+g48
+sbasS'sites'
+p74
+(lp75
+(icoord
+Site
+p76
+(dp77
+S'switch'
+p78
+g4
+sg7
+S'wash'
+p79
+sS'dtn'
+p80
+g40
+sba(icoord
+Site
+p81
+(dp82
+g78
+g21
+sg7
+S'amst'
+p83
+sg80
+g54
+sba(icoord
+Site
+p84
+(dp85
+g78
+g17
+sg7
+S'cern'
+p86
+sg80
+g49
+sba(icoord
+Site
+p87
+(dp88
+g78
 g30
-ag45
-ag38
-ag67
-asb.
+sg7
+S'denv'
+p89
+sg80
+g64
+sba(icoord
+Site
+p90
+(dp91
+g78
+g26
+sg7
+S'aofa'
+p92
+sg80
+g59
+sba(icoord
+Site
+p93
+(dp94
+g78
+g34
+sg7
+S'atla'
+p95
+sg80
+g69
+sbasb.
