--- a/sc17/demo.config
+++ b/sc17/demo.config
@@ -144,163 +144,184 @@ p43
 sg9
 S'192.168.120.192'
 p44
-sS'bias_args'
+sS'current_request'
 p45
-NsS'requests'
+NsS'bias_args'
 p46
-(lp47
+NsS'current_request_index'
+p47
+I-1
+sS'lock'
+p48
+p48
+(lp49
 sg16
 S'eth1'
-p48
+p50
 sba(icoord
 DTN
-p49
-(dp50
+p51
+(dp52
 g42
 Nsg7
 S'cern-194'
-p51
+p53
 sg9
 S'192.168.120.194'
-p52
+p54
 sg45
 Nsg46
-(lp53
+Nsg47
+I-1
+sg48
+(lp55
 sg16
-g48
+g50
 sba(icoord
 DTN
-p54
-(dp55
+p56
+(dp57
 g42
 Nsg7
 S'amst-190'
-p56
+p58
 sg9
 S'192.168.120.190'
-p57
+p59
 sg45
 Nsg46
-(lp58
+Nsg47
+I-1
+sg48
+(lp60
 sg16
-g48
+g50
 sba(icoord
 DTN
-p59
-(dp60
+p61
+(dp62
 g42
 Nsg7
 S'aofa-191'
-p61
+p63
 sg9
 S'192.168.120.191'
-p62
+p64
 sg45
 Nsg46
-(lp63
+Nsg47
+I-1
+sg48
+(lp65
 sg16
-g48
+g50
 sba(icoord
 DTN
-p64
-(dp65
+p66
+(dp67
 g42
 Nsg7
 S'denv-201'
-p66
+p68
 sg9
 S'192.168.120.201'
-p67
+p69
 sg45
 Nsg46
-(lp68
+Nsg47
+I-1
+sg48
+(lp70
 sg16
-g48
+g50
 sba(icoord
 DTN
-p69
-(dp70
+p71
+(dp72
 g42
 Nsg7
 S'atla-200'
-p71
+p73
 sg9
 S'192.168.120.200'
-p72
+p74
 sg45
 Nsg46
-(lp73
-sg16
-g48
-sbasS'sites'
-p74
+Nsg47
+I-1
+sg48
 (lp75
+sg16
+g50
+sbasS'sites'
+p76
+(lp77
 (icoord
 Site
-p76
-(dp77
-S'switch'
 p78
+(dp79
+S'switch'
+p80
 g4
 sg7
 S'wash'
-p79
+p81
 sS'dtn'
-p80
+p82
 g40
 sba(icoord
 Site
-p81
-(dp82
-g78
+p83
+(dp84
+g80
 g21
 sg7
 S'amst'
-p83
-sg80
-g54
+p85
+sg82
+g56
 sba(icoord
 Site
-p84
-(dp85
-g78
+p86
+(dp87
+g80
 g17
 sg7
 S'cern'
-p86
-sg80
-g49
+p88
+sg82
+g51
 sba(icoord
 Site
-p87
-(dp88
-g78
+p89
+(dp90
+g80
 g30
 sg7
 S'denv'
-p89
-sg80
-g64
+p91
+sg82
+g66
 sba(icoord
 Site
-p90
-(dp91
-g78
+p92
+(dp93
+g80
 g26
 sg7
 S'aofa'
-p92
-sg80
-g59
+p94
+sg82
+g61
 sba(icoord
 Site
-p93
-(dp94
-g78
+p95
+(dp96
+g80
 g34
 sg7
 S'atla'
-p95
-sg80
-g69
+p97
+sg82
+g71
 sbasb.
